--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "private": true,
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.4.1",
-    "@lavamoat/preinstall-always-fail": "^2.1.1"
+    "@lavamoat/preinstall-always-fail": "^2.1.1",
+    "@semantic-release/commit-analyzer": "^13.0.1"
   },
-  "packageManager": "yarn@4.12.0"
+  "packageManager": "yarn@4.12.0",
+  "lavamoat": {
+    "allowScripts": {
+      "@lavamoat/preinstall-always-fail": false
+    }
+  }
 }
