--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@lavamoat/allow-scripts": "^3.4.1",
     "@lavamoat/preinstall-always-fail": "^2.1.1",
     "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/git": "^10.0.1"
+    "@semantic-release/git": "^10.0.1",
+    "conventional-changelog-conventionalcommits": "^9.1.0"
   },
   "packageManager": "yarn@4.12.0",
   "lavamoat": {
