chore: initial test setup

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "dev": "next dev",
+    "lint:fix": "eslint . --fix",
+    "lint": "eslint .",
     "start": "next start",
+    "test": "vitest",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
@@ -31,25 +32,34 @@
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@stylistic/eslint-plugin": "^5.6.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@tsconfig/next": "^2.0.5",
+    "@types/jsdom": "^27",
     "@types/node": "^25.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.2",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.0.10",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
+    "jsdom": "^27.3.0",
     "semantic-release": "^25.0.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0"
+    "typescript-eslint": "^8.49.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.15"
   },
   "packageManager": "yarn@4.12.0",
   "lavamoat": {
     "allowScripts": {
       "@lavamoat/preinstall-always-fail": false,
-      "next>sharp": true
+      "next>sharp": true,
+      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": false,
+      "vitest>vite>esbuild": false
     }
   }
 }
