--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Lint, Typecheck & Tests
 
 on:
   push:
-    branches: [**]
+    branches: ['**']
   pull_request:
     types: [opened, synchronize, reopened]
 
