--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
         
-      - name: Run Lint
+      - name: Run type check
         run: yarn tsc
 
   unit-tests:
@@ -96,6 +96,6 @@ jobs:
           restore-keys: |
             vitest-${{ runner.os }}-
             
-      - name: Run Vitest with coverage 
+      - name: Run Vitest unit tests with coverage 
         run: |
           yarn test run --coverage --passWithNoTests
