--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-        
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Restore Node Modules Cache
         uses: actions/cache/restore@v4
         with:
@@ -69,6 +72,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+
+      - name: Enable Corepack
+        run: corepack enable
         
       - name: Restore Node Modules Cache
         uses: actions/cache/restore@v4
@@ -94,6 +100,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+
+      - name: Enable Corepack
+        run: corepack enable
         
       - name: Restore Node Modules Cache
         uses: actions/cache/restore@v4
