--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "target": "ES2023",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
