--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "prisma generate && next dev",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
+    "migrate:dev": "prisma migrate dev",
+    "postinstall": "prisma generate",
     "start": "next start",
     "test": "vitest",
     "tsc": "tsc --noEmit"
@@ -54,6 +56,7 @@
     "jsdom": "^27.3.0",
     "prisma": "^7.1.0",
     "semantic-release": "^25.0.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
     "vite-tsconfig-paths": "^5.1.4",
@@ -64,11 +67,13 @@
     "allowScripts": {
       "@lavamoat/preinstall-always-fail": false,
       "next>sharp": true,
-      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": false,
-      "vitest>vite>esbuild": false,
-      "prisma": false,
-      "prisma>@prisma/engines": false,
-      "prisma>better-sqlite3": false
+      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": true,
+      "vitest>vite>esbuild": true,
+      "prisma": true,
+      "prisma>@prisma/engines": true,
+      "prisma>better-sqlite3": true,
+      "tsx>esbuild": true,
+      "$root$": true
     }
   }
 }
