--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "prisma generate && next dev",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
+    "migrate:dev": "prisma migrate dev",
+    "postinstall": "prisma generate",
     "start": "next start",
     "test": "vitest",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@tanstack/react-query": "^5.90.12",
     "@trpc/client": "^11.7.2",
     "@trpc/next": "^11.7.2",
     "@trpc/react-query": "^11.7.2",
     "@trpc/server": "^11.7.2",
+    "dotenv": "^17.2.3",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -35,6 +40,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@tsconfig/next": "^2.0.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jsdom": "^27",
     "@types/node": "^25.0.1",
     "@types/react": "^19",
@@ -48,7 +54,9 @@
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.3.0",
+    "prisma": "^7.1.0",
     "semantic-release": "^25.0.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
     "vite-tsconfig-paths": "^5.1.4",
@@ -59,8 +67,13 @@
     "allowScripts": {
       "@lavamoat/preinstall-always-fail": false,
       "next>sharp": true,
-      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": false,
-      "vitest>vite>esbuild": false
+      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": true,
+      "vitest>vite>esbuild": true,
+      "prisma": true,
+      "prisma>@prisma/engines": true,
+      "prisma>better-sqlite3": true,
+      "tsx>esbuild": true,
+      "$root$": true
     }
   }
 }
