--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   ci:
     name: ${{ matrix.task.name }}
@@ -21,13 +25,17 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Enable Corepack
-        run: corepack enable 
+        run: |
+          VERSION=$(node -p "require('./package.json').packageManager")
+          echo "Activating $VERSION"
+          corepack enable
+          corepack prepare $VERSION --activate
 
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
           node-version: "lts/*"
-          cache: 'yarn' 
+          cache: 'yarn'
           registry-url: 'https://npm.pkg.github.com'
 
       - name: Install Dependencies
