--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,8 +2,8 @@ compressionLevel: mixed
 
 enableGlobalCache: false
 
-# Yarn uses PnP by default, but we use the `node-modules` linker for
-# compatibility with tools that expect a traditional `node_modules` folder.
+# Disable scripts by default for security reasons. Scripts can be enabled by
+# adding them to the `allow-scripts` configuration in `package.json`.
 enableScripts: false
 
 enableTelemetry: false
@@ -12,11 +12,9 @@ logFilters:
   - code: YN0004
     level: discard
 
-# Maintains compatibility and avoids PnP 'spawn sh' errors
+# Yarn uses PnP by default, but we use the `node-modules` linker for
+# compatibility with tools that expect a traditional `node_modules` folder.
 nodeLinker: node-modules
-
-# Speeds up the 'Link step' by reducing deep dependency nesting
-nmHoistingLimit: dependencies
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
