--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^0.14.0",
-    "@lavamoat/allow-scripts": "^3.4.1",
-    "@lavamoat/preinstall-always-fail": "^2.1.1",
     "@lingui/babel-plugin-lingui-macro": "^5.7.0",
     "@lingui/cli": "^5.7.0",
     "@lingui/loader": "^5.7.0",
@@ -74,19 +72,5 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.15"
   },
-  "packageManager": "yarn@4.12.0",
-  "lavamoat": {
-    "allowScripts": {
-      "@lavamoat/preinstall-always-fail": false,
-      "next>sharp": true,
-      "eslint-config-next>eslint-import-resolver-typescript>unrs-resolver": true,
-      "vitest>vite>esbuild": true,
-      "prisma": true,
-      "prisma>@prisma/engines": true,
-      "prisma>better-sqlite3": true,
-      "tsx>esbuild": true,
-      "$root$": true,
-      "@lingui/cli>esbuild": true
-    }
-  }
+  "packageManager": "pnpm@10.26.1"
 }
