--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "shadcn": "^3.6.2",
     "superjson": "^2.2.6",
-    "tw-animate-css": "^1.4.0",
     "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -75,7 +76,7 @@
     "prisma": "^7.1.0",
     "semantic-release": "^25.0.2",
     "tsx": "^4.21.0",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
     "vite-tsconfig-paths": "^5.1.4",
