--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@lingui/react": "^5.7.0",
     "@prisma/adapter-better-sqlite3": "^7.1.0",
     "@prisma/client": "^7.1.0",
-    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "@trpc/client": "^11.7.2",
     "@trpc/next": "^11.7.2",
@@ -54,7 +53,7 @@
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@stylistic/eslint-plugin": "^5.6.1",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@tsconfig/next": "^2.0.5",
@@ -75,8 +74,8 @@
     "jsdom": "^27.3.0",
     "prisma": "^7.1.0",
     "semantic-release": "^25.0.2",
+    "tailwindcss": "4.1.18",
     "tsx": "^4.21.0",
-    "tailwindcss": "^4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
     "vite-tsconfig-paths": "^5.1.4",
