--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
     "@formatjs/intl-localematcher": "^0.6.2",
     "@lingui/core": "^5.7.0",
     "@lingui/macro": "^5.7.0",
@@ -26,12 +27,18 @@
     "@trpc/next": "^11.7.2",
     "@trpc/react-query": "^11.7.2",
     "@trpc/server": "^11.7.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "negotiator": "^1.0.0",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "shadcn": "^3.6.2",
     "superjson": "^2.2.6",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -46,6 +53,7 @@
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@stylistic/eslint-plugin": "^5.6.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@tsconfig/next": "^2.0.5",
@@ -66,6 +74,7 @@
     "jsdom": "^27.3.0",
     "prisma": "^7.1.0",
     "semantic-release": "^25.0.2",
+    "tailwindcss": "4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
