--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@lingui/cli": "^5.7.0",
     "@lingui/loader": "^5.7.0",
     "@lingui/swc-plugin": "^5.9.0",
+    "@lingui/vite-plugin": "^5.7.0",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@stylistic/eslint-plugin": "^5.6.1",
